crates/agentprof-tui/tests/snapshots/views__roi__cross_turn_tool.snap
---
source: crates/agentprof-tui/tests/views.rs
expression: text
---
┌ RoiView (2/3) — Sort: [t]total  c=calls  s=success%  p=p50 ──────────────────────────────────────┐
│#   Tool                               Source     Calls   OK      Fail    Total      p50          │
│1   bash                               builtin    1       1       0       5.0s       5.0s         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ User-blocking (user think time) ─────────────────────────────────────────────────────────────────┐
│Tool                               Calls   Total                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Selected: bash ──────────────────────────────────────────────────────────────────────────────────┐
│  turn-A (5.0s✓)                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
