crates/agentprof-tui/tests/snapshots/views__roi__orphan_events.snap
---
source: crates/agentprof-tui/tests/views.rs
expression: buffer_to_symbol_grid(&buffer)
---
┌ RoiView (2/3) — Sort: [t]total  c=calls  s=success%  p=p50 · DIM = user-waiting ─────────────────┐
│#   Tool                               Source     Calls   OK      Fail    Total      p50          │
│1   <orphan>                           builtin    1       0       0       0ms        0ms          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Selected: <orphan> ──────────────────────────────────────────────────────────────────────────────┐
│  00000000-0000-0000-0000-000000000901 (0ms○)                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
