crates/agentprof-tui/tests/snapshots/views__roi__with_ask_user_mid_session.snap
---
source: crates/agentprof-tui/tests/views.rs
expression: buffer_to_symbol_grid(&buffer)
---
┌ RoiView (2/3) — Sort: [t]total  c=calls  s=success%  p=p50 · DIM = user-waiting ─────────────────┐
│#   Tool                             Source     Calls  OK     Fail   OK%   Total    Tot%  p50     │
│1   bash                             builtin    2      2      0      100%  700ms    0%    500ms   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│    ────────────────────────────────                                                              │
│*   ask_user                         builtin    1      1      0      100%  10.0m    99%   10.0m   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Selected: bash ──────────────────────────────────────────────────────────────────────────────────┐
│  00000000-0000-0000-0000-00000000c702 (200ms✓)  00000000-0000-0000-0000-00000000c721 (500ms✓)    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
