crates/agentprof-tui/tests/snapshots/views__roi__with_skill_invoked.snap
---
source: crates/agentprof-tui/tests/views.rs
expression: text
---
┌ RoiView (2/3) — Sort: [t]total  c=calls  s=success%  p=p50 ──────────────────────────────────────┐
│#   Tool                               Source     Calls   OK      Fail    Total      p50          │
│1   bash                               builtin    1       1       0       1.0s       1.0s         │
│2   skill__synthetic__example          skill/synt 1       1       0       1.0s       1.0s         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ User-blocking (user think time) ─────────────────────────────────────────────────────────────────┐
│Tool                               Calls   Total                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Selected: bash ──────────────────────────────────────────────────────────────────────────────────┐
│  00000000-0000-0000-0000-000000000053 (1.0s✓)                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
